changed review date forma

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -25,7 +25,7 @@
         <div class="card" style="width: 18rem;">
           <div class="card-body">
             <h5 class="card-title"><%= review.request.dog.name %></h5>
-            <h6 class="card-subtitle mb-2 text-muted"><%= review.request.start_date %> - <%= review.request.end_date %></h6>
+            <h6 class="card-subtitle mb-2 text-muted"><%= review.request.start_date.strftime("%B %e, %Y") %> - <%= review.request.end_date.strftime("%B %e, %Y") %></h6>
             <p class="card-text"> <%= '⭐️' * review.rating %> <%= review.content %></p>
           </div>
         </div>
