--- a/app/views/dogs/index.html.erb
+++ b/app/views/dogs/index.html.erb
@@ -5,20 +5,24 @@
 
   <div class="container cards-container" id="dogs"></div>
   <div class="row">
-    <% @dogs.each do |dog| %>
-      <div class="col-md-4 mb-3 dog-card">
-        <%= link_to dog_path(dog) do %>
-          <% if dog.photos.attached? %>
-            <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(<%= cl_image_path dog.photos.first.key, angle: 0 %>)"><%= dog.name %>
-            </div>
-          <% else %>
-            <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(https://images.unsplash.com/photo-1568688570940-831467d18af7?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1000&q=80)">
-            <%= dog.name %>
-            </div>
-          <% end %>
-        </div>
+    <% if @dogs.empty? %>
+      <p>Sorry, there are no pups available that match your search. Try again.</p>
+    <% else %>
+      <% @dogs.each do |dog| %>
+        <div class="col-md-4 mb-3 dog-card">
+          <%= link_to dog_path(dog) do %>
+            <% if dog.photos.attached? %>
+              <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(<%= cl_image_path dog.photos.first.key, angle: 0 %>)"><%= dog.name %>
+              </div>
+            <% else %>
+              <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(https://images.unsplash.com/photo-1568688570940-831467d18af7?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1000&q=80)">
+              <%= dog.name %>
+              </div>
+            <% end %>
+          </div>
+        <% end %>
       <% end %>
-      <% end %>
+    <% end %>
   </div>
 </div>
 <div id="geocoder" class="geocoder mt-5"></div>
