made all buttons consistent across page

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -28,7 +28,7 @@
 
               </div>
               <div class="form-actions d-flex justify-content-center">
-                <%= f.button :submit, "Sign up", class:"btn btn-sign-up" %>
+                <%= f.button :submit, "Sign up", class:"btn" %>
               </div>
             <% end %>
         </div>
