--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -6,7 +6,7 @@
     <% else %>
         <h1>Be a hero with <strong>Pupper</strong></h1>
         <p>Provide a loving home to a pup in need.</p>
-        <a class="btn btn-outline-light" href="<%= new_user_registration_path %>">Join now</a>
+        <a class="btn" href="<%= new_user_registration_path %>">Join now</a>
     <% end %>
   </div>
 </div>
