--- a/app/views/shared/_search_form.html.erb
+++ b/app/views/shared/_search_form.html.erb
@@ -5,5 +5,5 @@
           id: "nav-search",
         placeholder: "Find a dog by breed or location!"
     %>
-    <%= submit_tag "Search", class: "btn btn-outline-light ml-2 nav-search-group" %>
+    <%= submit_tag "Search", class: "btn ml-2 nav-search-group" %>
 <% end %>
