--- a/app/views/dogs/new.html.erb
+++ b/app/views/dogs/new.html.erb
@@ -10,7 +10,7 @@
       <%= f.input :description, label: "My mama says I'm...(description)" %>
       <%= f.input :address %>
       <%= f.input :photos, as: :file, input_html: { multiple: true } %>
-      <%= f.submit "Finish! 👌🏽", class: "btn btn-outline-dark" %>
+      <%= f.submit "Finish! 👌🏽", class: "btn" %>
       <% end %>
     </div>
   </div>
