changed name to firstname

--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -11,7 +11,7 @@
     <p>Currently waiting confirmation for: <%= resource.unconfirmed_email %></p>
     <% end %>
 
-    <%= f.input :name,
+    <%= f.input :first_name,
     required: false,
     input_html: { autocomplete: "new-name" }%>
     <%= f.input :password,
