--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,7 +1,7 @@
 <div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(https://images.unsplash.com/photo-1512341350577-a09358311cb1?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1500&q=80);">
   <div class="container">
     <% if user_signed_in? %>
-        <h1>Welcome back <strong><%= @user.name %>!</strong></h1>
+        <h1>Welcome back <strong><%= @user.first_name %>!</strong></h1>
         <%= link_to "Go to Dashboard", dashboard_path, class: "btn my-3"%>
     <% else %>
         <h1>Be a hero with <strong>Pupper</strong></h1>
