--- a/app/views/dogs/index.html.erb
+++ b/app/views/dogs/index.html.erb
@@ -21,6 +21,6 @@
       <% end %>
   </div>
 </div>
-<div id="geocoder" class="geocoder mt-5"></div>
+<!-- <div id="geocoder" class="geocoder mt-5"></div> -->
 <%= render "shared/map" %>
 </div>
