fixed dash tabs so cards go in correct places

--- a/app/views/pages/dashboard.html.erb
+++ b/app/views/pages/dashboard.html.erb
@@ -6,6 +6,9 @@
     <li class="nav-item" role="presentation">
       <a class="nav-link tabs-underlined" id="pills-upcoming-tab" data-toggle="pill" href="#pills-upcoming" role="tab" aria-controls="pills-upcoming" aria-selected="false">My Upcoming Fosters</a>
     </li>
+      <li class="nav-item" role="presentation">
+      <a class="nav-link tabs-underlined" id="pills-upcoming-tab" data-toggle="pill" href="#pills-current" role="tab" aria-controls="pills-upcoming" aria-selected="false">My Current Fosters</a>
+    </li>
     <li class="nav-item" role="presentation">
       <a class="nav-link tabs-underlined" id="pills-past-tab" data-toggle="pill" href="#pills-past" role="tab" aria-controls="pills-past" aria-selected="false">My Past Fosters</a>
     </li>
@@ -31,10 +34,25 @@
     </div>
     <div class="tab-pane fade" id="pills-upcoming" role="tabpanel" aria-labelledby="pills-upcoming-tab">
       <div class="row">
-        <% if @accepted_requests.empty? %>
+        <% if @upcoming_requests.empty? %>
         <p>You don't have have any upcoming fosters yet. <%= link_to "Find a puppy to foster here!", dogs_path %></p>
         <% else %>
-        <% @accepted_requests.each do |request| %>
+        <% @upcoming_requests.each do |request| %>
+          <%= link_to dog_path(request.dog) do %>
+        <div class="col-md-4">
+          <%= render "dogs/card", request: request, review: nil %>
+          <% end %>
+        </div>
+        <% end %>
+        <% end %>
+      </div>
+    </div>
+     <div class="tab-pane fade" id="pills-current" role="tabpanel" aria-labelledby="pills-current-tab">
+      <div class="row">
+        <% if @current_fosters.empty? %>
+        <p>You're not currently fostering any puppies. <%= link_to "Find a puppy to foster here!", dogs_path %></p>
+        <% else %>
+        <% @current_fosters.each do |request| %>
           <%= link_to dog_path(request.dog) do %>
         <div class="col-md-4">
           <%= render "dogs/card", request: request, review: nil %>
