made slight changes to home and user pages

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -13,9 +13,9 @@
 <div class="container" id="home-head-container">
     <div class="row">
         <div class="home-search-form">
-          <div>
+          <div class="site-info">
           <h4>Be a <strong>hero</strong>. Foster a puppy waiting to be adopted.</h4>
-          <p>Browse puppies looking for a nurturing, loving place to call home. When you're ready, click "Request to Foster" on the dog of your choice, and the breeder will get back to you within 3-5 business days. Pupper thanks you for being a hero.</p>
+          <p>Browse puppies looking for a nurturing, loving place to call home. Click "Request to Foster" on the dog of your choice, and the owner will get back to you. Pupper thanks you for being a hero.</p>
         </div>
         <div id="home-search-container">
             <%= render "shared/search_form" %>
