--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -20,3 +20,10 @@ div.home-search-form {
 #home-search-container {
   margin-left: 27px;
 }
+
+.site-info {
+  border: 2px solid $medium-green;
+  border-radius: 10px;
+  padding: 16px 8px;
+  color: $darkest-green;
+}
