fixed sign up page

--- a/app/assets/stylesheets/pages/_login_signup.scss
+++ b/app/assets/stylesheets/pages/_login_signup.scss
@@ -2,7 +2,7 @@
     background-image: url('https://images.unsplash.com/photo-1573233919790-17009f6cdbe6?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=700&q=60');
     background-size: cover;
     background-position: center;
-    height: 100vh;
+    height: 800px;
     display: flex;
 }
 
