--- a/app/views/pages/dashboard.html.erb
+++ b/app/views/pages/dashboard.html.erb
@@ -1,4 +1,5 @@
 <div class="container">
+  <h1>Your Dashboard</h1>
   <ul class="nav nav-pills dashboard-nav mb-3" id="pills-tab" role="tablist">
     <li class="nav-item" role="presentation">
       <a class="nav-link tabs-underlined active" id="pills-requests-tab" data-toggle="pill" href="#pills-requests" role="tab" aria-controls="pills-requests" aria-selected="true">Requests I've Made</a>
