dash now fully functional completed triggered when end date is after today

--- a/app/views/dogs/_card.html.erb
+++ b/app/views/dogs/_card.html.erb
@@ -13,7 +13,7 @@
       <div class="card-info">
         <i class="<%= request.request_icon %>"></i> Status: <%= request.status.capitalize %>
       </br>
-      <%= request.start_date %> <%= request.end_date %>
+      <%= request.start_date.strftime("%A, %b %d, %y") %> </br> <%= request.end_date.strftime("%A, %b %d, %y") %>
       <% if request.dog.user != current_user %>
       <%= link_to "View Owner's Profile", user_path(request.dog.user) %>
       <% end %>
