--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -38,7 +38,7 @@
             <h2><%= dog.name %></h2>
             <p><%= dog.breed  %></p>
           </div>
-          <h2 class="card-trip-age">Age: <%= pluralize dog.age.size, "week" %>u</h2>
+          <h2 class="card-trip-age">Age: <%= pluralize dog.age.size, "week" %></h2>
 
         </div>
       </div>
