--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -4,7 +4,7 @@
   <% end %>
 
   <!-- Rails knows the params of the page that you are on -->
-  <% if params[:action] != "home" %>
+  <% if params[:action] != "home" && params[:action] != "index" %>
       <%= render "shared/search_form" %>
   <% end %>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
