--- a/app/assets/stylesheets/pages/_dashboard.scss
+++ b/app/assets/stylesheets/pages/_dashboard.scss
@@ -43,3 +43,16 @@
 .card-dash {
   margin: 12px;
 }
+
+#id-head {
+  display: block;
+    border-bottom: 1px solid #3DCCC7;
+    padding: 8px;
+    width: 30%;
+    position: relative;
+    bottom: -6px;
+    margin-bottom: 25px;
+    margin: 0 auto;
+    text-align: center;
+    margin-bottom: 16px;
+}
