hovering over maker now highligts the card

--- a/app/assets/stylesheets/components/_map.scss
+++ b/app/assets/stylesheets/components/_map.scss
@@ -1,7 +1,6 @@
 #map {
   height: calc(100vh - 100px);
   position: sticky;
-
   width: 60%;
 }
 
@@ -25,4 +24,8 @@
   padding: 4px;
   font-weight: lighter;
   font-size: 15px;
+}
+
+.highlight {
+  border: 1px solid red;
 }
