--- a/app/views/pages/dashboard.html.erb
+++ b/app/views/pages/dashboard.html.erb
@@ -66,7 +66,7 @@
     <div class="tab-pane fade" id="pills-past" role="tabpanel" aria-labelledby="pills-past-tab">
       <div class="row">
         <% if @past_requests.empty? %>
-        <p>You haven't fostered any puppys yet. <%= link_to "Find a puppy to foster here!", dogs_path %></p>
+        <p>You haven't fostered any puppies yet. <%= link_to "Find a puppy to foster here!", dogs_path %></p>
         <% else %>
           <% @past_requests.each do |request| %>
             <%= link_to dog_path(request.dog) do %>
