--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,4 +1,4 @@
-<div class="navbar <%= 'background-white' if params[:action] != 'home' %> navbar-expand-sm navbar-light navbar-pupper fixed-top">
+<div class="navbar <%= 'background-white navbar-bottom' if params[:action] != 'home' %> navbar-expand-sm navbar-light navbar-pupper fixed-top">
   <%= link_to root_path, class: "link-icon" do %>
   <i class="fa fa-paw" aria-hidden="true"></i><span class="title-bar">Pupper</span>
   <% end %>
