--- a/app/views/requests/new.html.erb
+++ b/app/views/requests/new.html.erb
@@ -1,11 +1,11 @@
 <div class="request-container">
-  <h1 class="request-title">Make New Request</h1>
+  <h1 class="request-title">Request to foster <%= @dog.name %></h1>
   <div class="request-form">
   <%= simple_form_for [@dog, @request] do |f|%>
       <%= f.input :content, label: "Why?" %>
       <%= f.input :start_date, html5: true %>
       <%= f.input :end_date, html5:true %>
-      <%= f.submit "Make Request", class: "btn btn-outline-dark" %>
+      <%= f.submit "Make Request", class: "btn btn-outline-dark", id: "sweet-alert" %>
   <% end %>
 </div>
 </div>
