--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -15,7 +15,7 @@
         <div class="home-search-form">
           <div class="site-info">
           <h4>Be a <strong>hero</strong>. Foster a puppy waiting to be adopted.</h4>
-          <p>Browse puppies looking for a nurturing, loving place to call home. Click "Request to Foster" on the dog of your choice, and the owner will get back to you. Pupper thanks you for being a hero.</p>
+          <p>When you choose to become a puppy parent through fostering, you’re choosing to help end pet homelessness, and at Pupper, we're committed to finding homes for puppies everywhere. Become a puppy parent today.</p>
         </div>
         <div id="home-search-container">
             <%= render "shared/search_form" %>
