--- a/app/assets/stylesheets/pages/_user_show.scss
+++ b/app/assets/stylesheets/pages/_user_show.scss
@@ -1,16 +1,29 @@
 .container.show{
-  padding: 5%;
+  padding: 1%;
   .img{
     text-align: center;
   }
   .details{
-    border-left: 4px solid $darkest-green;
+    border-left: 2px solid $darkest-green;
   }
   .details p{
     font-size: 15px;
     font-weight: bold;
   }
 
+}
+
+#pro-head {
+  display: block;
+    border-bottom: 2px solid #3DCCC7;
+    padding: 8px;
+    width: 30%;
+    position: relative;
+    bottom: -6px;
+    margin-bottom: 25px;
+    margin: 0 auto;
+    text-align: center;
+    margin-bottom: 32px;
 }
 
 div.users-pups {
