--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,4 +1,5 @@
 <div class="container show">
+  <h2 id="pro-head">Profile</h2>
   <div class="row">
     <div class="col-md-4 img">
       <% if @user.avatar.attached? %>
